# Cnake-Game

./: .gitignore  CMakeLists.txt  README.md
include/: arr_length.h  char_to_int_entity.h  cut_snake.h  entity_defines.h  global_defines.h  hostile_handler.h  level_loader.h  move_entity.h  set_entity.h  title_screen.h  traverse_level.h  ui_element.h  wall_collide.h
levels/: level1.txt
src/: arr_length.c  char_to_int_entity.c  cut_snake.c  hostile_handler.c  level_loader.c  main.c  move_entity.c  set_entity.c  title_screen.c  ui_element.c  wall_collide.c
